# Groq_RAG

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
